Added google fonts link, removed img from header.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/grid.css" rel="stylesheet" type="text/css">
@@ -10,11 +11,10 @@
   </head>
   <body>
     <header class="headergrid">
-      <img id="Header" src="images/blacklab.jpeg" alt="Black Lab">
       <a class="logo" href="index.html"><img src="images/logo.svg"></img></a>
       <nav class="nav effect">
           <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+          <a href="about.html">About Us</a>
               <a href="team.html">Meet The Team</a>
           <a href="services.html">Services</a>
           <a href="gallery.html">Gallery</a>
