--- a/index.html
+++ b/index.html
@@ -10,74 +10,115 @@
     <title>Doggie Walks</title>
   </head>
   <body>
-    <header class="headergrid">
-      <a class="logo" href="index.html"><img src="images/logo.svg"></img></a>
-      <nav class="nav effect">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-              <a href="team.html">Meet The Team</a>
-          <a href="services.html">Services</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="contact.html">Contact Us</a>
-      </nav>
-      <h1 class="title">Doggie Walks</h1>
-      <h2 class="tag">Helping Our Animal Friends One Paw At A Time</h2>
-      <a class="dog" href="contact.html"><img src="images/Promo.svg"></img></a>
+    <header>
+      <section class="headgrid">
+        <a class="logo" href="index.html"><img src="img/logo.svg"></img></a>
+        <nav>
+          <a class="active" href="index.html">
+            Home
+          </a>
+          <a href="about.html">
+            About Us
+          </a>
+              <a href="team.html">
+                Meet The Team
+              </a>
+          <a href="services.html">
+            Services
+          </a>
+          <a href="gallery.html">
+            Gallery
+          </a>
+          <a href="contact.html">
+            Contact Us
+          </a>
+        </nav>
+        <a href="tel:0161-883-1122"><img src="img/call.svg" class="call"  alt="Call Us"></a>
+        <h1 class="headtitle">Doggie Walks</h1>
+        <h2 class="headtag">Helping Our Animal Friends One Paw At A Time</h2>
+        <a class="adddog" href="contact.html"><img src="img/Promo.svg"></img></a>
+      </section>
       </header>
-    <article class="grid">
-      <section>
-        <h1 class="heading">Welcome To Doggie Walks</h1>
-        <p class="paragraph">We are commited to providing professional and personal care to your beloved four-legged friends.
-        We are based in Macclesfield and we offer exciting and stimulating walks all over the beautiful Chesire countryside. We gaurantee your dog will come home tired and content.
-        We recognise every dog’s needs are different and how busy daily life can be. With services starting from only £10 we ensure that you the best possible service to suit the needs of both you and your pooch.
-        We are also fully insured for everybody’s peace of mind, for more information on this please <span>contact us</span> or email at info@doggiewalks.co.uk</p>
+    <article>
+      <section class="index1">
+        <section class="index1grid">
+          <section class="indextext">
+            <h1>Welcome To Doggie Walks</h1>
+            <p>We are commited to providing professional and personal care to your beloved four-legged friends.</p>
+            <p>We are based in Macclesfield and we offer exciting and stimulating walks all over the beautiful Cheshire countryside. We gaurantee your dog will come home tired and content.</p>
+            <p>We recognise every dog’s needs are different and how busy daily life can be. With services starting from only £10 we ensure that you the best possible service to suit the needs of both you and your pooch.</p>
+            <p>We are also fully insured for everybody’s peace of mind, for more information on this please <span>contact us</span> or email at info@doggiewalks.co.uk</p>
+          </section>
+          <aside class="locations">
+            <h3>Where We Are</h3>
+            <ul>
+              <li>Manchester</li>
+              <li>Macclesfield</li>
+              <li>Southport</li>
+              <li>Warrington</li>
+            </ul>
+          </aside>
+          <aside class="opentime">
+            <h3>Opening Times</h3>
+            <ul>
+              <li>Monday - Friday</li>
+              <li>8am - 7pm</li>
+              <li>Saturday</li>
+              <li>8am - 5pm</li>
+              <li>Sunday</li>
+              <li>12pm - 5pm</li>
+            </ul>
+          </aside>
+        </section>
       </section>
-      <section class="locations">
-        <h3>Where We Are</h3>
-        <ul>
-          <li>Manchester</li>
-          <li>Macclesfield</li>
-          <li>Southport</li>
-          <li>Warrington</li>
-        </ul>
-      </section>
-      <section class="times">
-        <h3>Opening Times</h3>
-        <ul>
-          <li>Monday - Friday</li>
-          <li>8am - 7pm</li>
-          <li>Saturday</li>
-          <li>8am - 5pm</li>
-          <li>Sunday</li>
-          <li>12pm - 5pm</li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="heading2">
-        <figure class="sitting">
-          <figcaption>Pet Sitting (Puppy and Elderly)</figcaption>
-        </figure>
-        <figure class="smallpet">
-          <figcaption>Small Pet Visits</figcaption>
-        </figure>
-        <figure class="overnight">
-          <figcaption>Overnight Pet Sittings</figcaption>
-        </figure>
-      </section>
-      <section class="sittingprice">
-        <h3>From £##</h3>
-      </section>
-      <section class="smallpetprice">
-        <h3>From £##</h3>
-      </section>
-      <section class="overnightprice">
-        <h3>From £##</h3>
-      </section>
+      <section class="index2">
+        <h2 class="title">We Also offer different services such as</h2>
+        <a href="contact.html">
+          <section class="offers sitting">
+            <h1>Pet Sitting (Puppy and Elderly)</h1>
+            <section class="quote">
+              <h2>Get a Quote!</h2>
+            </section>
+          </section>
+        </a>
+        <a href="contact.html">
+          <section class="offers visits">
+            <h1>Small Pet Visits</h1>
+            <section class="quote">
+              <h2>Get a Quote!</h2>
+            </section>
+          </section>
+        </a>
+        <a href="contact.html">
+          <section class="offers overnight">
+            <h1>Overnight Pet Sitting</h1>
+            <section class="quote">
+              <h2>Get a Quote!</h2>
+            </section>
+          </section>
+        </a>
       <section class="lastpar">
         <p>There’s something to suit everyone but if you can’t find what you’re looking for don’t hesitate to<span>contact us</span> and we will find the perfect solution for you and your companion!</p>
     </article>
     <footer>
+      <section class="left">
+        <p>Phone: 0161 883 1122</p>
+        <p>Email: info@doggiewalks.co.uk</p>
+      </section>
+      <section class="footerlogo">
+        <a href="index.html"><img src="img/logo.svg"></img></a>
+      </section>
+      <section class="right">
+          <h3>Opening Times</h3>
+          <ul>
+            <li>Monday - Friday</li>
+            <li>8am - 7pm</li>
+            <li>Saturday</li>
+            <li>8am - 5pm</li>
+            <li>Sunday</li>
+            <li>12pm - 5pm</li>
+          </ul>
+      </section>
     </footer>
-
   </body>
 </html>
