Edited second nav name. Added hover cursor on footer logo.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Home
           </a>
           <a class="dropmenu">
-            About Us &#x25BE;
+            About &#x25BE;
           </a>
           <a href="services.html">
             Services
