Fixed spelling and grammar errors

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
       </section>
       <section class="index2">
-        <h2 class="title">We Also offer different services such as</h2>
+        <h2 class="title">We Also offer different services</h2>
         <a href="contact.html">
           <section class="offers sitting">
             <h1>Pet Sitting (Puppy and Elderly)</h1>
@@ -105,7 +105,7 @@
           </section>
         </a>
       <section class="lastpar">
-        <p>There’s something to suit everyone but if you can’t find what you’re looking for don’t hesitate to<span>contact us</span> and we will find the perfect solution for you and your companion!</p>
+        <p>There’s something to suit everyone but if you can’t find what you’re looking for don’t hesitate to <span>contact us</span> and we will find the perfect solution for you and your companion!</p>
     </article>
     <footer>
       <section class="left">
