closed final section tag

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </a>
       <section class="lastpar">
         <p>There’s something to suit everyone but if you can’t find what you’re looking for don’t hesitate to <span>contact us</span> and we will find the perfect solution for you and your companion!</p>
+      </section>
     </article>
     <footer>
       <section class="left">
