--- a/team.html
+++ b/team.html
@@ -2,68 +2,96 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/grid.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <!-- Link to JS files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Doggie Walks</title>
   </head>
   <body>
-    <header class="headergrid">
-      <a href="index.html"><img class="logo" src="images/logo.svg"></img></a>
-      <nav class="nav">
-          <a href="index.html">Home</a>
-          <div class="dropdown">
-            <a href="about.html"><button class="dropbtn">About Us
-              <i class="fa fa-caret-down"></i>
-            </button></a>
-            <div class="dropdown-content">
-              <a href="team.html">Meet The Team</a>
-            </div>
-          </div>
-          <a href="services.html">Services</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="contact.html">Contact Us</a>
-      </nav>
-      <h1 class="title">Doggie Walks</h1>
-      <h2 class="tag">Helping Our Animal Friends One Paw At A Time</h2>
-      <a href="contact.html"><img class="dog" src="images/Promo.svg"></img></a>
-    </header>
+    <header>
+      <section class="headgrid">
+        <a class="logo" href="index.html"><img src="img/logo.svg"></img></a>
+        <nav class="hidden  " id="dropdown">
+          <a class="dropbtn" href="about.html">
+            About Us
+          </a>
+          <a class="dropbtn" href="team.html">
+            Meet The Team
+          </a>
+        </nav>
+        <nav>
+          <a href="index.html">
+            Home
+          </a>
+          <a class="activepage dropmenu">
+            About &#x25BE;
+          </a>
+          <a href="services.html">
+            Services
+          </a>
+          <a href="gallery.html">
+            Gallery
+          </a>
+          <a href="contact.html">
+            Contact Us
+          </a>
+        </nav>
+        <a href="tel:0161-883-1122"><img src="img/call.svg" class="call"  alt="Call Us"></a>
+        <h1 class="headtitle">Doggie Walks</h1>
+        <h2 class="headtag">Helping Our Animal Friends One Paw At A Time</h2>
+        <a class="adddog" href="contact.html"><img src="img/Promo.svg"></img></a>
+      </section>
+      </header>
     <article>
-      <section>
-        <h1 class="heading">Welcome To Doggie Walks</h1>
-        <p class="paragraph">We are commited to providing professional and personal care to your beloved four-legged friends.
-        We are based in Macclesfield and we offer exciting and stimulating walks all over the beautiful Chesire countryside. We gaurantee your dog will come home tired and content.
-        We recognise every dog’s needs are different and how busy daily life can be. With services starting from only £10 we ensure that you the best possible service to suit the needs of both you and your pooch.
-        We are also fully insured for everybody’s peace of mind, for more information on this please contact us or email at info@doggiewalks.co.uk</p>
+      <section class="teampage">
+        <h1>Meet The Team</h1>
+        <p>Meet the Doggie Walks team!! We're fully trained and insured to work with animals and are committed to the health and benefits of your pet. We aim to keep providing the best knowledge regarding dogs as we can, and to do this we believe you can not sit still in this occupation as we learn more about dogs daily. We ensure that our knowledge is kept up-to-date by attending regular seminars and courses presented by well-respected canine trainers, behaviourists, and practitioners!</p>
       </section>
-      <section class="locations">
-        <h3>Where We Are</h3>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+      <section class="teamlist lori">
+        <h1>Lori Hanson</h1>
+        <h2>Founder of Doggie Walks</h2>
+        <img class="team" src="img/team/lori.jpg" alt="Lori Hanson">
       </section>
-      <section class="times">
-        <h3>Opening Times</h3>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+      <section class="teamlist gary">
+        <h1>Gary Simpson</h1>
+        <h2>Team Manager</h2>
+        <img class="team" src="img/team/gary.jpg" alt="Gary Simpson">
       </section>
-      <section>
-        <h2 class="heading2">
-        <figure class="sitting">
-          <figcaption>Pet Sitting (Puppy and Elderly)</figcaption>
-        </figure>
-        <figure class="smallpet">
-          <figcaption>Small Pet Visits</figcaption>
-        </figure>
-        <figure class="overnight">
-          <figcaption>Overnight Pet Sittings</figcaption>
-        </figure>
+      <section class="teamlist rebecca">
+        <h1>Rebecca Harrison</h1>
+        <h2>professional Dog Walker</h2>
+        <img class="team" src="img/team/rebecca.jpg" alt="Rebecca Harrison">
+      </section>
+      <section class="teamlist joanna">
+        <h1>Joanna Davies</h1>
+        <h2>Professional Dog Walker</h2>
+        <img class="team" src="img/team/joanna.jpg" alt="Joanna Davies">
+      </section>
     </article>
+    <footer>
+      <section class="left">
+        <p>Phone: 0161 883 1122</p>
+        <p>Email: info@doggiewalks.co.uk</p>
+      </section>
+      <section class="footerlogo">
+        <a href="index.html"><img src="img/logo.svg"></img></a>
+      </section>
+      <section class="right">
+          <h3>Opening Times</h3>
+          <ul>
+            <li>Monday - Friday</li>
+            <li>8am - 7pm</li>
+            <li>Saturday</li>
+            <li>8am - 5pm</li>
+            <li>Sunday</li>
+            <li>12pm - 5pm</li>
+          </ul>
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
