Updated the title for each page, changed class name on section to save code

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/grid.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/scripts.js"></script>
-    <title>Doggie Walks</title>
+    <title>Gallery - Doggie Walks</title>
   </head>
   <body>
     <header class="headergrid">
