--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <!-- Link to JS files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Doggie Walks</title>
+    <title>Meet The Team - Doggie Walks</title>
   </head>
   <body>
     <header>
@@ -47,7 +47,7 @@
       </section>
       </header>
     <article>
-      <section class="teampage">
+      <section class="flex">
         <h1>Meet The Team</h1>
         <p>Meet the Doggie Walks team!! We're fully trained and insured to work with animals and are committed to the health and benefits of your pet. We aim to keep providing the best knowledge regarding dogs as we can, and to do this we believe you can not sit still in this occupation as we learn more about dogs daily. We ensure that our knowledge is kept up-to-date by attending regular seminars and courses presented by well-respected canine trainers, behaviourists, and practitioners!</p>
       </section>
