--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- Link to JS files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Doggie Walks</title>
+    <title>About Us - Doggie Walks</title>
   </head>
   <body>
     <header>
@@ -47,7 +47,7 @@
       </section>
       </header>
     <article>
-      <section class="aboutpage">
+      <section class="flex">
         <h1>About us</h1>
         <p>Doggie Walks is committed to ensuring that your pet is safe, healthy and active. Our canine friends should feel different terrain under their paws, hear different sounds, see different sights and have a decent sniff about!</p>
         <p>While dogs need daily exercise in order to stay healthy, for many people it's not always possible to walk their pets regurlarly.</p>
