--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <!-- Link to JS files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Doggie Walks</title>
+    <title>Services - Doggie Walks</title>
   </head>
   <body>
     <header>
