Added section around team members for better positioning.

--- a/team.html
+++ b/team.html
@@ -52,25 +52,27 @@
         <h1>Meet The Team</h1>
         <p>Meet the Doggie Walks team!! We're fully trained and insured to work with animals and are committed to the health and benefits of your pet. We aim to keep providing the best knowledge regarding dogs as we can, and to do this we believe you can not sit still in this occupation as we learn more about dogs daily. We ensure that our knowledge is kept up-to-date by attending regular seminars and courses presented by well-respected canine trainers, behaviourists, and practitioners!</p>
       </section>
-      <section class="teamlist lori">
-        <h1>Lori Hanson</h1>
-        <h2>Founder of Doggie Walks</h2>
-        <img class="team" src="img/team/lori.jpg" alt="Lori Hanson">
-      </section>
-      <section class="teamlist gary">
-        <h1>Gary Simpson</h1>
-        <h2>Team Manager</h2>
-        <img class="team" src="img/team/gary.jpg" alt="Gary Simpson">
-      </section>
-      <section class="teamlist rebecca">
-        <h1>Rebecca Harrison</h1>
-        <h2>professional Dog Walker</h2>
-        <img class="team" src="img/team/rebecca.jpg" alt="Rebecca Harrison">
-      </section>
-      <section class="teamlist joanna">
-        <h1>Joanna Davies</h1>
-        <h2>Professional Dog Walker</h2>
-        <img class="team" src="img/team/joanna.jpg" alt="Joanna Davies">
+      <section class="teamsection">
+        <section class="teamlist lori">
+          <h1>Lori Hanson</h1>
+          <h2>Founder of Doggie Walks</h2>
+          <img class="team" src="img/team/lori.jpg" alt="Lori Hanson">
+        </section>
+        <section class="teamlist gary">
+          <h1>Gary Simpson</h1>
+          <h2>Team Manager</h2>
+          <img class="team" src="img/team/gary.jpg" alt="Gary Simpson">
+        </section>
+        <section class="teamlist rebecca">
+          <h1>Rebecca Harrison</h1>
+          <h2>professional Dog Walker</h2>
+          <img class="team" src="img/team/rebecca.jpg" alt="Rebecca Harrison">
+        </section>
+        <section class="teamlist joanna">
+          <h1>Joanna Davies</h1>
+          <h2>Professional Dog Walker</h2>
+          <img class="team" src="img/team/joanna.jpg" alt="Joanna Davies">
+        </section>
       </section>
     </article>
     <footer>
